--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,7 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="about">about</string>
+    <string name="textview">TextView</string>
+    <string name="todo">TODO</string>
+    <string name="textview">TextView</string>
 </resources>
